# Typing-Automation-Tools

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  index.html  package.ps1
include/: key_sim_lib.h  type-at-wpm.h
lib/: .gitignore  CMakeLists.txt  Clipboard-Paster.cpp  WPM-Hotkey-Launcher.cpp  WPM-Simulator.cpp  resources.rc  type-clipboard.cpp
resources/: resource.h
src/: RCa23124  key_sim_lib.cpp  package.ps1  type-at-wpm.cpp  type-clipboard.cpp
